feat: Added core modeling.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -3,14 +3,17 @@
         title = "{Radio astrophysics. Nonthermal processes in galactic and extragalactic sources}",
          year = 1970,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1970ranp.book.....P},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+      publisher={American Institute of Physics}
+},
 }
-@BOOK{1979rpa..book.....R,
+@BOOK{RybickiLightman,
        author = {{Rybicki}, George B. and {Lightman}, Alan P.},
         title = "{Radiative processes in astrophysics}",
          year = 1979,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1979rpa..book.....R},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+      publisher={John Wiley \& Sons}
 }
 @article{demarchiRadioAnalysisSN2004C2022,
   title = {Radio {{Analysis}} of {{SN2004C Reveals}} an {{Unusual CSM Density Profile}} as a {{Harbinger}} of {{Core Collapse}}},
@@ -24,3 +27,154 @@
   doi = {10.3847/1538-4357/ac8c26},
   urldate = {2025-12-29},
   }
+@ARTICLE{Margutti2019COW,
+       author = {{Margutti}, R. and {Metzger}, B.~D. and {Chornock}, R. and {Vurm}, I. and {Roth}, N. and {Grefenstette}, B.~W. and {Savchenko}, V. and {Cartier}, R. and {Steiner}, J.~F. and {Terreran}, G. and {Margalit}, B. and {Migliori}, G. and {Milisavljevic}, D. and {Alexander}, K.~D. and {Bietenholz}, M. and {Blanchard}, P.~K. and {Bozzo}, E. and {Brethauer}, D. and {Chilingarian}, I.~V. and {Coppejans}, D.~L. and {Ducci}, L. and {Ferrigno}, C. and {Fong}, W. and {G{\"o}tz}, D. and {Guidorzi}, C. and {Hajela}, A. and {Hurley}, K. and {Kuulkers}, E. and {Laurent}, P. and {Mereghetti}, S. and {Nicholl}, M. and {Patnaude}, D. and {Ubertini}, P. and {Banovetz}, J. and {Bartel}, N. and {Berger}, E. and {Coughlin}, E.~R. and {Eftekhari}, T. and {Frederiks}, D.~D. and {Kozlova}, A.~V. and {Laskar}, T. and {Svinkin}, D.~S. and {Drout}, M.~R. and {MacFadyen}, A. and {Paterson}, K.},
+        title = "{An Embedded X-Ray Source Shines through the Aspherical AT 2018cow: Revealing the Inner Workings of the Most Luminous Fast-evolving Optical Transients}",
+      journal = {\apj},
+     keywords = {accretion, accretion disks, stars: black holes, supernovae: individual: AT 2018cow, X-rays: general, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2019,
+        month = feb,
+       volume = {872},
+       number = {1},
+          eid = {18},
+        pages = {18},
+          doi = {10.3847/1538-4357/aafa01},
+archivePrefix = {arXiv},
+       eprint = {1810.10720},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...872...18M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{gelman1992inference,
+  title={Inference from iterative simulation using multiple sequences},
+  author={Gelman, Andrew and Rubin, Donald B},
+  journal={Statistical science},
+  volume={7},
+  number={4},
+  pages={457--472},
+  year={1992},
+  publisher={Institute of Mathematical Statistics}
+}
+@article{vehtari2021rank,
+  title={Rank-normalization, folding, and localization: An improved R ̂ for assessing convergence of MCMC (with discussion)},
+  author={Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and B{\"u}rkner, Paul-Christian},
+  journal={Bayesian analysis},
+  volume={16},
+  number={2},
+  pages={667--718},
+  year={2021},
+  publisher={International Society for Bayesian Analysis}
+}
+@article{chevalierSelfsimilarSolutionsInteraction1982,
+	title = {Self-similar solutions for the interaction of stellar ejecta with an external medium.},
+	volume = {258},
+	issn = {0004-637X},
+	url = {https://ui.adsabs.harvard.edu/abs/1982ApJ...258..790C},
+	doi = {10.1086/160126},
+	urldate = {2025-11-25},
+	journal = {The Astrophysical Journal},
+	author = {Chevalier, R. A.},
+	month = jul,
+	year = {1982},
+	note = {ADS Bibcode: 1982ApJ...258..790C},
+	pages = {790--797},
+}
+@ARTICLE{ChevalierXRayRadioEmission1982,
+       author = {{Chevalier}, R.~A.},
+        title = "{The radio and X-ray emission from type II supernovae.}",
+      journal = {\apj},
+     keywords = {Radio Sources (Astronomy), Stellar Envelopes, Stellar Radiation, Supernovae, X Ray Sources, Compton Effect, Heao 2, Pulsars, Radiation Absorption, Relativistic Electron Beams, Stellar Magnetic Fields, Stellar Mass Ejection, Stellar Motions, Stellar Structure, Taylor Instability, Astrophysics},
+         year = 1982,
+        month = aug,
+       volume = {259},
+        pages = {302-310},
+          doi = {10.1086/160167},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1982ApJ...259..302C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2002ApJ...577L...5B,
+       author = {{Berger}, E. and {Kulkarni}, S.~R. and {Chevalier}, R.~A.},
+        title = "{The Radio Evolution of the Ordinary Type Ic Supernova SN 2002ap}",
+      journal = {\apjl},
+     keywords = {Gamma Rays: Bursts, Radiation Mechanisms: Nonthermal, Radio Continuum: General, Stars: Supernovae: Individual: Alphanumeric: SN 2002ap, Astrophysics},
+         year = 2002,
+        month = sep,
+       volume = {577},
+       number = {1},
+        pages = {L5-L8},
+          doi = {10.1086/344045},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0206183},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...577L...5B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{1999ApJ...510..379M,
+       author = {{Matzner}, Christopher D. and {McKee}, Christopher F.},
+        title = "{The Expulsion of Stellar Envelopes in Core-Collapse Supernovae}",
+      journal = {\apj},
+     keywords = {HYDRODYNAMICS, SHOCK WAVES, STARS: INTERIORS, ISM: SUPERNOVA REMNANTS, STARS: SUPERNOVAE: GENERAL, STARS: SUPERNOVAE: INDIVIDUAL: ALPHANUMERIC: SN 1987A, Hydrodynamics, Shock Waves, Stars: Interiors, ISM: Supernova Remnants, Stars: Supernovae: General, Stars: Supernovae: Individual: Alphanumeric: SN 1987A, Astrophysics},
+         year = 1999,
+        month = jan,
+       volume = {510},
+       number = {1},
+        pages = {379-403},
+          doi = {10.1086/306571},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9807046},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999ApJ...510..379M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{taylor1950formation,
+  title={The formation of a blast wave by a very intense explosion.-II. The atomic explosion of 1945},
+  author={Taylor, Geoffrey Ingram},
+  journal={Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+  volume={201},
+  number={1065},
+  pages={175--186},
+  year={1950},
+  publisher={The Royal Society London}
+}
+@article{sedov1946propagation,
+  title={Propagation of strong shock waves},
+  author={Sedov, Leonid Ivanovich},
+  journal={Journal of Applied Mathematics and Mechanics},
+  volume={10},
+  pages={241--250},
+  year={1946}
+}
+@ARTICLE{GaoSynchrotronReview2013,
+       author = {{Gao}, He and {Lei}, Wei-Hua and {Zou}, Yuan-Chuan and {Wu}, Xue-Feng and {Zhang}, Bing},
+        title = "{A complete reference of the analytical synchrotron external shock models of gamma-ray bursts}",
+      journal = {\nar},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2013,
+        month = dec,
+       volume = {57},
+       number = {6},
+        pages = {141-190},
+          doi = {10.1016/j.newar.2013.10.001},
+archivePrefix = {arXiv},
+       eprint = {1310.2181},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013NewAR..57..141G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{GranotSari2002SpectralBreaks,
+       author = {{Granot}, Jonathan and {Sari}, Re'em},
+        title = "{The Shape of Spectral Breaks in Gamma-Ray Burst Afterglows}",
+      journal = {\apj},
+     keywords = {Gamma Rays: Bursts, Gamma Rays: Theory, Radiation Mechanisms: Nonthermal, Shock Waves, Astrophysics},
+         year = 2002,
+        month = apr,
+       volume = {568},
+       number = {2},
+        pages = {820-829},
+          doi = {10.1086/338966},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0108027},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...568..820G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
