docs: Wrote the microphysics description for synchrotron.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -178,3 +178,33 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...568..820G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@misc{wuDelayedRadioEmission2025,
+	title = {Delayed radio emission in tidal disruption events from collisions of outflows driven by disk instabilities},
+	url = {https://ui.adsabs.harvard.edu/abs/2025arXiv251114008W},
+	abstract = {Delayed radio emission has been associated with a growing proportion of tidal disruption events (TDEs). For many events, the radio synchrotron emission is inferred to originate from the interaction of mildly-relativistic outflows, launched with delay times of \${\textbackslash}sim 100\$--\$1000\$ d after the TDE optical peak. The mechanism behind these outflows remains uncertain, but may relate to instabilities or state transitions in the accretion disk formed from the TDE. We model the radio emission powered by the collision of mass outflows ("flares") from TDE accretion disks, considering scenarios in which two successive disk flares collide with each other, as well as collisions between the outflow and the circumnuclear medium (CNM). For flare masses of \${\textbackslash}sim 0.01\$-\$0.1 M\_\{{\textbackslash}odot\}\$, varied CNM densities, and different time intervals between ejected flares, we demonstrate that the shocks formed by the collisions have velocities \$0.05c\$-\$0.3c\$ at \${\textbackslash}sim 10{\textasciicircum}\{17\}\$ cm and power bright radio emission of \$L\_ν {\textbackslash}sim 10{\textasciicircum}\{27\}\$-\$10{\textasciicircum}\{30\}\$ erg s\${\textasciicircum}\{-1\}\$ Hz\${\textasciicircum}\{-1\}\$, consistent with the properties inferred for observed events. We quantify how the typical peak timescale and flux varies for different properties of our models, and compare our model predictions to a selection of TDEs with delayed radio emission. Our models successfully reproduce the light curves and SEDs for several events, supporting the idea that delayed outflows from disk instabilities and state transitions can power late-time radio emission in TDEs.},
+	urldate = {2025-11-19},
+	publisher = {arXiv},
+	author = {Wu, Samantha C. and Tsuna, Daichi and Mockler, Brenna and Piro, Anthony L.},
+	month = nov,
+	year = {2025},
+	note = {ADS Bibcode: 2025arXiv251114008W},
+	keywords = {High Energy Astrophysical Phenomena},
+	file = {Full Text PDF:/Users/ediggins/Zotero/storage/EUMK7RSY/Wu et al. - 2025 - Delayed radio emission in tidal disruption events from collisions of outflows driven by disk instabi.pdf:application/pdf},
+}
+
+@misc{caprioliParticleAccelerationShocks2023,
+	title = {Particle {Acceleration} at {Shocks}: {An} {Introduction}},
+	shorttitle = {Particle {Acceleration} at {Shocks}},
+	url = {http://arxiv.org/abs/2307.00284},
+	doi = {10.48550/arXiv.2307.00284},
+	abstract = {These notes present the fundamentals of Fermi acceleration at shocks, with a special attention to the role that supernova remnants have in producing Galactic cosmic rays. Then, the recent discoveries in the theory of diffusive shock acceleration (DSA) that stem from first-principle kinetic plasma simulations are discussed. When ion acceleration is efficient, the back-reaction of non-thermal particles and self-generated magnetic fields becomes prominent and leads to both enhanced shock compression and particle spectra significantly softer than those predicted by the standard test-particle DSA theory. These results are discussed in the context of the non-thermal phenomenology of astrophysical shocks, with a special focus on the remnant of SN1006.},
+	urldate = {2025-11-21},
+	publisher = {arXiv},
+	author = {Caprioli, Damiano},
+	month = oct,
+	year = {2023},
+	note = {arXiv:2307.00284 [astro-ph]},
+	keywords = {Astrophysics - High Energy Astrophysical Phenomena, Physics - Plasma Physics, Physics - Space Physics},
+	annotate = {Comment: 39 pages, 13 figures. Published in "Foundations of Cosmic Ray Astrophysics", Proceedings of the International School of Physics "Enrico Fermi", Course 208, Varenna, 24-29 June 2022, edited by F. Aharonian, E. Amato, and P. Blasi},
+	file = {Preprint PDF:/Users/ediggins/Zotero/storage/UYFYUUQ2/Caprioli - 2023 - Particle Acceleration at Shocks An Introduction.pdf:application/pdf;Snapshot:/Users/ediggins/Zotero/storage/S3JPFMNS/2307.html:text/html},
+}
