docs: Working on core theory docs.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -191,7 +191,23 @@ archivePrefix = {arXiv},
 	keywords = {High Energy Astrophysical Phenomena},
 	file = {Full Text PDF:/Users/ediggins/Zotero/storage/EUMK7RSY/Wu et al. - 2025 - Delayed radio emission in tidal disruption events from collisions of outflows driven by disk instabi.pdf:application/pdf},
 }
-
+@ARTICLE{PiranGammaRayBursts2004,
+       author = {{Piran}, Tsvi},
+        title = "{The physics of gamma-ray bursts}",
+      journal = {Reviews of Modern Physics},
+     keywords = {98.70.Rz, 95.30.Cq, 95.30.Lz, 96.50.Kr, 47.40.Nm, 47.75.+f, 95.75.De, 01.30.Rr, gamma-ray sources, gamma-ray bursts, Elementary particle processes, Hydrodynamics, Shock wave interactions and shock effects, Relativistic fluid dynamics, Photography and photometry, Surveys and tutorial papers, resource letters, Astrophysics},
+         year = 2004,
+        month = oct,
+       volume = {76},
+       number = {4},
+        pages = {1143-1210},
+          doi = {10.1103/RevModPhys.76.1143},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0405503},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004RvMP...76.1143P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @misc{caprioliParticleAccelerationShocks2023,
 	title = {Particle {Acceleration} at {Shocks}: {An} {Introduction}},
 	shorttitle = {Particle {Acceleration} at {Shocks}},
