docs: Working on core theory docs.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -224,3 +224,56 @@ archivePrefix = {arXiv},
 	annotate = {Comment: 39 pages, 13 figures. Published in "Foundations of Cosmic Ray Astrophysics", Proceedings of the International School of Physics "Enrico Fermi", Course 208, Varenna, 24-29 June 2022, edited by F. Aharonian, E. Amato, and P. Blasi},
 	file = {Preprint PDF:/Users/ediggins/Zotero/storage/UYFYUUQ2/Caprioli - 2023 - Particle Acceleration at Shocks An Introduction.pdf:application/pdf;Snapshot:/Users/ediggins/Zotero/storage/S3JPFMNS/2307.html:text/html},
 }
+
+@incollection{ChevalierFranssonHandbook,
+	address = {Cham},
+	title = {Thermal and nonthermal emission from circumstellar interaction},
+	isbn = {978-3-319-20794-0},
+	url = {https://doi.org/10.1007/978-3-319-20794-0_34-1},
+	doi = {10.1007/978-3-319-20794-0_34-1},
+	abstract = {It has become clear during the last decades that the interaction between the supernova ejecta and the circumstellar medium is playing a major role both for the observational properties of the supernova and for understanding the evolution of the progenitor star leading up to the explosion. In addition, it provides an opportunity to understand the shock physics connected to both thermal and nonthermal processes, including relativistic particle acceleration, radiation processes, and the hydrodynamics of shock waves. This chapter has an emphasis on the information we can get from radio and X-ray observations, but also their connection to observations in the optical and ultraviolet. We first review the different physical processes involved in circumstellar interaction, including hydrodynamics, thermal X-ray emission, acceleration of relativistic particles, and non-emission processes in the radio and X-ray ranges. Finally, we discuss applications of these to different types of supernovae.},
+	booktitle = {Handbook of supernovae},
+	publisher = {Springer International Publishing},
+	author = {Chevalier, Roger A. and Fransson, Claes},
+	editor = {Alsabti, Athem W. and Murdin, Paul},
+	year = {2017},
+	pages = {1--63},
+}
+@ARTICLE{YangPitchAngles,
+       author = {{Yang}, Yuan-Pei and {Zhang}, Bing},
+        title = "{Synchrotron Radiation from Electrons with a Pitch-angle Distribution}",
+      journal = {\apjl},
+     keywords = {radiation mechanisms: non-thermal, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = sep,
+       volume = {864},
+       number = {1},
+          eid = {L16},
+        pages = {L16},
+          doi = {10.3847/2041-8213/aada4f},
+archivePrefix = {arXiv},
+       eprint = {1808.05170},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...864L..16Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Chevalier1998SynchrotronSelfAbsorption,
+       author = {{Chevalier}, Roger A.},
+        title = "{Synchrotron Self-Absorption in Radio Supernovae}",
+      journal = {\apj},
+     keywords = {Radiation Mechanisms: Nonthermal, Radio Continuum: Stars, Stars: Supernovae: General},
+         year = 1998,
+        month = may,
+       volume = {499},
+       number = {2},
+        pages = {810-819},
+          doi = {10.1086/305676},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...499..810C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@book{CRCTables,
+  title={CRC standard mathematical tables and formulae},
+  author={Zwillinger, Daniel},
+  year={2002},
+  publisher={chapman and hall/CRC}
+}
