--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -277,3 +277,22 @@ archivePrefix = {arXiv},
   year={2002},
   publisher={chapman and hall/CRC}
 }
+@book{clarke2007principles,
+  title={Principles of astrophysical fluid dynamics},
+  author={Clarke, Cathie and Carswell, Bob},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+@book{thorne2017modern,
+  title={Modern classical physics: optics, fluids, plasmas, elasticity, relativity, and statistical physics},
+  author={Thorne, Kip S and Blandford, Roger D},
+  year={2017},
+  publisher={Princeton University Press}
+}
+@book{landau1987fluid,
+  title={Fluid Mechanics: Volume 6},
+  author={Landau, Lev Davidovich and Lifshitz, Evgeny Mikhailovich},
+  volume={6},
+  year={1987},
+  publisher={Elsevier}
+}
