docs: Improved synchrotron theory notes.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -296,3 +296,75 @@ archivePrefix = {arXiv},
   year={1987},
   publisher={Elsevier}
 }
+@ARTICLE{2000ApJ...534L.163G,
+       author = {{Granot}, Jonathan and {Piran}, Tsvi and {Sari}, Re'em},
+        title = "{The Synchrotron Spectrum of Fast Cooling Electrons Revisited}",
+      journal = {\apjl},
+     keywords = {GAMMA RAYS: BURSTS, RADIATION MECHANISMS: NONTHERMAL, SHOCK WAVES, TURBULENCE, Astrophysics},
+         year = 2000,
+        month = may,
+       volume = {534},
+       number = {2},
+        pages = {L163-L166},
+          doi = {10.1086/312661},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0001160},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000ApJ...534L.163G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2025ApJ...992L..18S,
+       author = {{Sfaradi}, Itai and {Margutti}, Raffaella and {Chornock}, Ryan and {Alexander}, Kate D. and {Metzger}, Brian D. and {Beniamini}, Paz and {Duran}, Rodolfo Barniol and {Yao}, Yuhan and {Horesh}, Assaf and {Farah}, Wael and {Berger}, Edo and {A.~J.}, Nayana and {Cendes}, Yvette and {Eftekhari}, Tarraneh and {Fender}, Rob and {Franz}, Noah and {Green}, Dave A. and {Hammerstein}, Erica and {Lu}, Wenbin and {Wiston}, Eli and {Bernstein}, Yirmi and {Bright}, Joe and {Christy}, Collin T. and {Cruz}, Luigi F. and {DeBoer}, David R. and {Golay}, Walter W. and {Goodwin}, Adelle J. and {Gurwell}, Mark and {Keating}, Garrett K. and {Laskar}, Tanmoy and {Miller-Jones}, James C.~A. and {Pollak}, Alexander W. and {Rao}, Ramprasad and {Siemion}, Andrew and {Sheikh}, Sofia Z. and {Shoval}, Nadav and {van Velzen}, Sjoert},
+        title = "{The First Radio-bright Off-nuclear Tidal Disruption Event AT 2024tvd Reveals the Fastest-evolving Double-peaked Radio Emission}",
+      journal = {\apjl},
+     keywords = {Tidal disruption, Supermassive black holes, Radio astronomy, Time domain astronomy, 1696, 1663, 1338, 2109, High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = oct,
+       volume = {992},
+       number = {2},
+          eid = {L18},
+        pages = {L18},
+          doi = {10.3847/2041-8213/ae0a26},
+archivePrefix = {arXiv},
+       eprint = {2508.03807},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...992L..18S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{sari1999jets,
+  title={Jets in gamma-ray bursts},
+  author={Sari, Re'em and Piran, Tsvi and Halpern, Jules P},
+  journal={The Astrophysical Journal},
+  volume={519},
+  number={1},
+  pages={L17},
+  year={1999},
+  publisher={IOP Publishing}
+}
+@ARTICLE{1998ApJ...497L..17S,
+       author = {{Sari}, Re'em and {Piran}, Tsvi and {Narayan}, Ramesh},
+        title = "{Spectra and Light Curves of Gamma-Ray Burst Afterglows}",
+      journal = {\apjl},
+     keywords = {GAMMA RAYS: BURSTS, HYDRODYNAMICS, SHOCK WAVES, RELATIVITY, Gamma Rays: Bursts, Hydrodynamics, Relativity, Shock Waves, Astrophysics},
+         year = 1998,
+        month = apr,
+       volume = {497},
+       number = {1},
+        pages = {L17-L20},
+          doi = {10.1086/311269},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9712005},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...497L..17S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{duran2013radius,
+  title={Radius constraints and minimal equipartition energy of relativistically moving synchrotron sources},
+  author={Duran, Rodolfo Barniol and Nakar, Ehud and Piran, Tsvi},
+  journal={The Astrophysical Journal},
+  volume={772},
+  number={1},
+  pages={78},
+  year={2013},
+  publisher={IOP Publishing}
+}
