docs: Worked on examples for synchrotron SEDs.

--- a/docs/source/docs_bib.bib
+++ b/docs/source/docs_bib.bib
@@ -358,7 +358,7 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/1998ApJ...497L..17S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-@article{duran2013radius,
+    @article{duran2013radius,
   title={Radius constraints and minimal equipartition energy of relativistically moving synchrotron sources},
   author={Duran, Rodolfo Barniol and Nakar, Ehud and Piran, Tsvi},
   journal={The Astrophysical Journal},
@@ -367,4 +367,21 @@ archivePrefix = {arXiv},
   pages={78},
   year={2013},
   publisher={IOP Publishing}
+}
+@ARTICLE{2020MNRAS.493.3521B,
+       author = {{Beniamini}, Paz and {Granot}, Jonathan and {Gill}, Ramandeep},
+        title = "{Afterglow light curves from misaligned structured jets}",
+      journal = {\mnras},
+     keywords = {radiation mechanisms: general, gamma-ray burst: general, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = apr,
+       volume = {493},
+       number = {3},
+        pages = {3521-3534},
+          doi = {10.1093/mnras/staa538},
+archivePrefix = {arXiv},
+       eprint = {2001.02239},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.3521B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
